--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "^4.0.1"
   },
   "devDependencies": {
